# gmail-map-in-rust

./: Cargo.toml  Dockerfile  README.md
src/: gmail_client.rs  main.rs
