[package]
name = "gmail-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
mime_guess = "2.0"
url = "2.5"
lettre = { version = "0.11", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }
# The google-apis-rs crates usually depend on hyper-util/hyper-rustls for transport
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "tls12"] }
mime = "0.3"
